--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,7 @@
             transition: all 0.5s ease;
             background: rgba(44, 44, 44, 0.5);
             backdrop-filter: blur(10px);
+            box-shadow: 0 5px 15px rgba(187, 134, 252, 0.3);
         }
         
         #modelo-select {
